--- a/robotObstacles (3)/robotObstacles/.project
+++ b/robotObstacles (3)/robotObstacles/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>sf.eclipse.javacc.core.javaccbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>sf.eclipse.javacc.javaccbuilder</name>
 			<arguments>
 			</arguments>
@@ -19,6 +24,7 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>sf.eclipse.javacc.javaccnature</nature>
+		<nature>sf.eclipse.javacc.core.javaccnature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
